# embedding-explorer

./: Makefile  README.md  pyproject.toml
src/embedding_explorer/: __init__.py  embedder.py  visualizer.py
tests/: test_embedder.py  test_visualizer.py
