[project]
name = "embedding-explorer"
version = "0.1.0"
description = "Visual tool for understanding embeddings. Compare models, visualize in 2D with PCA, and analyze similarity."
license = {text = "MIT"}
authors = [{name = "Marlon Barreto", email = "mbarretot@hotmail.com"}]
keywords = ["embeddings", "AI", "NLP", "visualization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "sentence-transformers>=3.4.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/marlonbarreto-git/embedding-explorer"
Repository = "https://github.com/marlonbarreto-git/embedding-explorer"
Issues = "https://github.com/marlonbarreto-git/embedding-explorer/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embedding_explorer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
